--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,51 @@
   color: #61dafb;
 }
 
+/* .background.jumbotron {  
+  width: 100%;
+  background-position: center;  
+  position: relative;  
+}
+.background::before{
+  position: absolute;
+  background-image: url("./images/background.jpeg");
+  background-size: cover;
+
+  opacity: 0.5; 
+  width: 100%;
+} */
+
+.jumbotron{
+  background-image: url("./images/background.jpeg");
+  background-size: cover;
+  position: relative;  
+  height: 242px;
+}
+.jumbotron::after{
+  content: "";
+  opacity: 0.5;
+  position: absolute;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.jumbotron h1{
+  color: white;
+}
+
+.jangmi {
+  position: absolute;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
+  top: 40px;
+  left: 0;
+  color: white;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
